--- a/data/sources/vuejs-cz-sk.yaml
+++ b/data/sources/vuejs-cz-sk.yaml
@@ -1,13 +1,13 @@
 series:
   meetupcom:
     url: https://www.meetup.com/vuejs-cz-sk/
-    description: Přijďte se seznámit a poklábosit si o progresivním JS frameworku Vue.js a vývoji webových stránek a aplikací.Chystáme setkání v Praze a Brně s prezentacemi, novinkami z komunity i ukázkami případových
-    title: Vue.js CZ/SK (Prague, Czech Republic)
+    meta_description: Přijďte se seznámit a poklábosit si o progresivním JS frameworku Vue.js a vývoji webových stránek a aplikací.Chystáme setkání v Praze a Brně s prezentacemi, novinkami z komunity i ukázkami případových
+    og_title: Vue.js CZ/SK (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/b/1/e/7/600_469905543.jpeg
   events:
   - meetupcom:
-      description: 'Wed, Jun 23, 2021, 6:00 PM: Jelikož už nás covidová nečinnost nebaví, rozhodli jsme se opět zorganizovat večer na naše oblíbené téma Vue.js.V případě zájmu se zaregistrujte na eventbrite: https://www.'
-      title: 'Vue.js Meetup Brno #5'
+      meta_description: 'Wed, Jun 23, 2021, 6:00 PM: Jelikož už nás covidová nečinnost nebaví, rozhodli jsme se opět zorganizovat večer na naše oblíbené téma Vue.js.V případě zájmu se zaregistrujte na eventbrite: https://www.'
+      og_title: 'Vue.js Meetup Brno #5'
       image: https://secure.meetupstatic.com/photos/event/5/9/b/4/600_495982964.jpeg
       url: https://www.meetup.com/vuejs-cz-sk/events/277852111/
       ical_raw:
@@ -58,8 +58,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Wed, Jul 29, 2020, 6:30 PM: Po karanténě se potkáme znova naživo nad zajímavými tématy z Vue.js vesmíru.Jako vždy, nebude chybět pivo, pizza a skvělá atmosféra našeho brněnského Vue.js kolektivu 😊Pro'
-      title: 'Vue.js Meetup Brno #4'
+      meta_description: 'Wed, Jul 29, 2020, 6:30 PM: Po karanténě se potkáme znova naživo nad zajímavými tématy z Vue.js vesmíru.Jako vždy, nebude chybět pivo, pizza a skvělá atmosféra našeho brněnského Vue.js kolektivu 😊Pro'
+      og_title: 'Vue.js Meetup Brno #4'
       image: https://secure.meetupstatic.com/photos/event/a/8/0/c/600_491323020.jpeg
       url: https://www.meetup.com/vuejs-cz-sk/events/271623946/
       ical_raw:
@@ -111,8 +111,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Mon, Mar 2, 2020, 6:30 PM: Na druhém meetupu jsme se koukli na Typescript ve Vue, Vue CLI a novinky ve Vue3.Na třetím meetupu kromě jiného s Vue3 pokračujeme. A připájíme i téma, které jste si sami od'
-      title: 'Vue.js Meetup Brno #3'
+      meta_description: 'Mon, Mar 2, 2020, 6:30 PM: Na druhém meetupu jsme se koukli na Typescript ve Vue, Vue CLI a novinky ve Vue3.Na třetím meetupu kromě jiného s Vue3 pokračujeme. A připájíme i téma, které jste si sami od'
+      og_title: 'Vue.js Meetup Brno #3'
       image: https://secure.meetupstatic.com/photos/event/3/a/1/1/600_488954865.jpeg
       url: https://www.meetup.com/vuejs-cz-sk/events/268655132/
       ical_raw:
@@ -164,8 +164,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Wed, Jan 22, 2020, 6:30 PM: Tento event je pouze informativní!Nezapomeňte se registrovat na https://www.eventbrite.com/e/vueprague-2020-meetup-tickets-87456888909'
-      title: VuePRAGUE 2020 Meetup
+      meta_description: 'Wed, Jan 22, 2020, 6:30 PM: Tento event je pouze informativní!Nezapomeňte se registrovat na https://www.eventbrite.com/e/vueprague-2020-meetup-tickets-87456888909'
+      og_title: VuePRAGUE 2020 Meetup
       image: https://secure.meetupstatic.com/photos/event/5/9/e/2/600_488123010.jpeg
       url: https://www.meetup.com/vuejs-cz-sk/events/267453445/
       ical_raw:
