--- a/data/sources/cloud-native-prague.yaml
+++ b/data/sources/cloud-native-prague.yaml
@@ -1,13 +1,13 @@
 series:
   meetupcom:
     url: https://www.meetup.com/Cloud-Native-Prague/
-    description: We are a group of enthusiasts of cloud native solutions from Prague and we believe there is more of us out there! We want to meet you all. Let's build a strong, cloud-native community to share experie
-    title: Cloud Native Prague (Prague, Czech Republic)
+    meta_description: We are a group of enthusiasts of cloud native solutions from Prague and we believe there is more of us out there! We want to meet you all. Let's build a strong, cloud-native community to share experie
+    og_title: Cloud Native Prague (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/8/0/3/9/600_494792825.jpeg
   events:
   - meetupcom:
-      description: 'Tue, May 18, 2021, 6:00 PM: Cloud-Native Prague #16 is here! Come join us online, share experiences and discuss successes and fuck-ups. It was a great last time, so prepare some drink and connect with'
-      title: 'Cloud Native Prague Meetup #16'
+      meta_description: 'Tue, May 18, 2021, 6:00 PM: Cloud-Native Prague #16 is here! Come join us online, share experiences and discuss successes and fuck-ups. It was a great last time, so prepare some drink and connect with'
+      og_title: 'Cloud Native Prague Meetup #16'
       image: https://secure.meetupstatic.com/photos/event/3/8/0/e/600_496154350.jpeg
       url: https://www.meetup.com/Cloud-Native-Prague/events/278042296/
       ical_raw:
@@ -58,8 +58,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Tue, Mar 2, 2021, 6:00 PM: Hey Cloud-natives,we are happy to announce another meetup with amazing talks. We will meet online, so there is no reason to change because of the stain on your old and belov'
-      title: 'Cloud Native Prague Meetup #15'
+      meta_description: 'Tue, Mar 2, 2021, 6:00 PM: Hey Cloud-natives,we are happy to announce another meetup with amazing talks. We will meet online, so there is no reason to change because of the stain on your old and belov'
+      og_title: 'Cloud Native Prague Meetup #15'
       image: https://secure.meetupstatic.com/photos/event/a/5/e/c/600_494802476.jpeg
       url: https://www.meetup.com/Cloud-Native-Prague/events/276422404/
       ical_raw:
@@ -110,8 +110,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Thu, Jan 28, 2021, 6:00 PM: Hi Cloud-natives,we hope you are safe and sound because winter is coming. We managed to prepare some exciting agenda for another online meetup - believe us or not - number '
-      title: 'Cloud Native Prague Meetup #14'
+      meta_description: 'Thu, Jan 28, 2021, 6:00 PM: Hi Cloud-natives,we hope you are safe and sound because winter is coming. We managed to prepare some exciting agenda for another online meetup - believe us or not - number '
+      og_title: 'Cloud Native Prague Meetup #14'
       image: https://secure.meetupstatic.com/photos/event/5/a/2/0/600_494483072.jpeg
       url: https://www.meetup.com/Cloud-Native-Prague/events/275827515/
       ical_raw:
@@ -162,8 +162,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Tue, Nov 24, 2020, 6:00 PM: Hey Cloud-natives,it seems like online meetups are our "new normal". Don''t be sad and come join us from your home, we will share experiences and discuss successes and f**k-'
-      title: 'Cloud Native Prague Meetup #13'
+      meta_description: 'Tue, Nov 24, 2020, 6:00 PM: Hey Cloud-natives,it seems like online meetups are our "new normal". Don''t be sad and come join us from your home, we will share experiences and discuss successes and f**k-'
+      og_title: 'Cloud Native Prague Meetup #13'
       image: https://secure.meetupstatic.com/photos/event/d/9/1/6/600_493495574.jpeg
       url: https://www.meetup.com/Cloud-Native-Prague/events/274535019/
       ical_raw:
