--- a/data/sources/gcdc-prague.yaml
+++ b/data/sources/gcdc-prague.yaml
@@ -1,13 +1,13 @@
 series:
   meetupcom:
     url: https://www.meetup.com/GCDC-Prague/
-    description: Google Cloud Developer Community Prague (GCDC Prague). Cílem je vytvořit místo pro online i offline setkání vývojářů, analytiků, konzultantů nebo architektů pro sdílení znalostí a zkušenosti se služba
-    title: Google Cloud Developer Community Prague (Prague, Czech Republic)
+    meta_description: Google Cloud Developer Community Prague (GCDC Prague). Cílem je vytvořit místo pro online i offline setkání vývojářů, analytiků, konzultantů nebo architektů pro sdílení znalostí a zkušenosti se služba
+    og_title: Google Cloud Developer Community Prague (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/d/f/b/5/600_471357269.jpeg
   events:
   - meetupcom:
-      description: 'Wed, May 19, 2021, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o tom jak s GCP začít]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme přílež'
-      title: Cloud Talks vol.7 {Jak začít s GCP}
+      meta_description: 'Wed, May 19, 2021, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o tom jak s GCP začít]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme přílež'
+      og_title: Cloud Talks vol.7 {Jak začít s GCP}
       image: https://secure.meetupstatic.com/photos/event/7/6/7/0/600_495210320.jpeg
       url: https://www.meetup.com/GCDC-Prague/events/276944440/
       ical_raw:
@@ -59,8 +59,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Wed, Mar 3, 2021, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o K8s]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání'
-      title: Cloud Talks vol.6 {Kubernetes}
+      meta_description: 'Wed, Mar 3, 2021, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o K8s]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání'
+      og_title: Cloud Talks vol.6 {Kubernetes}
       image: https://secure.meetupstatic.com/photos/event/4/b/f/3/600_490519443.jpeg
       url: https://www.meetup.com/GCDC-Prague/events/274666372/
       ical_raw:
@@ -112,8 +112,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Wed, Nov 11, 2020, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o Serverless Computing]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příle'
-      title: Cloud Talks vol.5 {Serverless Computing}
+      meta_description: 'Wed, Nov 11, 2020, 6:30 PM: [Pojďme se potkat online přes Google Meet a nasdílet zkušenosti o Serverless Computing]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příle'
+      og_title: Cloud Talks vol.5 {Serverless Computing}
       image: https://secure.meetupstatic.com/photos/event/4/b/f/3/600_490519443.jpeg
       url: https://www.meetup.com/GCDC-Prague/events/273622225/
       ical_raw:
@@ -165,8 +165,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Wed, Oct 7, 2020, 6:30 PM: [Pojďme se potkat online a nasdílet zkušenosti o práci s daty]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tém'
-      title: Cloud Talks vol.4 {Data}
+      meta_description: 'Wed, Oct 7, 2020, 6:30 PM: [Pojďme se potkat online a nasdílet zkušenosti o práci s daty]Proč?======Baví nás Google Cloud technologie a díky sérii Cloud talks vytváříme příležitost k setkávání nad tém'
+      og_title: Cloud Talks vol.4 {Data}
       image: https://secure.meetupstatic.com/photos/event/4/b/f/3/600_490519443.jpeg
       url: https://www.meetup.com/GCDC-Prague/events/272110257/
       ical_raw:
