--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -1,13 +1,13 @@
 series:
   meetupcom:
     url: https://www.meetup.com/Prague-DevOps-Meetup/
-    description: 'DevOps is the next level of Agile. While Agile connects Business and Development to speed up the process. DevOps is connecting Development with delivery to production and maintenance (IT Operations). '
-    title: Prague DevOps Meetup (Prague, Czech Republic)
+    meta_description: 'DevOps is the next level of Agile. While Agile connects Business and Development to speed up the process. DevOps is connecting Development with delivery to production and maintenance (IT Operations). '
+    og_title: Prague DevOps Meetup (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
   events:
   - meetupcom:
-      description: 'Wed, Sep 8, 2021, 7:00 PM: Hello doers,The third online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the session will be one main'
-      title: Prague DevOps meetup online (September)
+      meta_description: 'Wed, Sep 8, 2021, 7:00 PM: Hello doers,The third online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the session will be one main'
+      og_title: Prague DevOps meetup online (September)
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/280234441/
       ical_raw:
@@ -59,8 +59,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Wed, Aug 4, 2021, 7:00 PM: Hello doers,The second online devops meetup is here and we are ready to welcome all devops enthusiasts, from Prague or elsewhere.The structure of the session will be similar'
-      title: Prague DevOps meetup online
+      meta_description: 'Wed, Aug 4, 2021, 7:00 PM: Hello doers,The second online devops meetup is here and we are ready to welcome all devops enthusiasts, from Prague or elsewhere.The structure of the session will be similar'
+      og_title: Prague DevOps meetup online
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/277429169/
       ical_raw:
