--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -1,13 +1,13 @@
 series:
   meetupcom:
     url: https://www.meetup.com/TopMonks-Caffe/
-    description: Regular meetup focused on new technologies. For EVERYBODY who is interested into it.
-    title: TopMonks Caffè (Prague, Czech Republic)
+    meta_description: Regular meetup focused on new technologies. For EVERYBODY who is interested into it.
+    og_title: TopMonks Caffè (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/2/2/8/5/600_473768837.jpeg
   events:
   - meetupcom:
-      description: 'Tue, Aug 3, 2021, 7:00 PM: Podíváme se na zoubek nástrojům, které časem ztratily svůj význam a dnes už jsou přežité.'
-      title: Jednoduše a rychle
+      meta_description: 'Tue, Aug 3, 2021, 7:00 PM: Podíváme se na zoubek nástrojům, které časem ztratily svůj význam a dnes už jsou přežité.'
+      og_title: Jednoduše a rychle
       image: https://secure.meetupstatic.com/photos/event/1/2/3/7/600_497884663.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/279829674/
       ical_raw:
@@ -58,8 +58,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Tue, Jul 13, 2021, 7:00 PM: Jirka Jansa a Jirka Pénzeš prozradí své osobní zkušenosti z údržby a vývoje legacy systému. Zároveň se podíváme i na best practices a různé cesty, které se dají při vývoji '
-      title: Legacy | refactoring 2021
+      meta_description: 'Tue, Jul 13, 2021, 7:00 PM: Jirka Jansa a Jirka Pénzeš prozradí své osobní zkušenosti z údržby a vývoje legacy systému. Zároveň se podíváme i na best practices a různé cesty, které se dají při vývoji '
+      og_title: Legacy | refactoring 2021
       image: https://secure.meetupstatic.com/photos/event/a/b/d/600_497402749.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/279359705/
       ical_raw:
@@ -111,8 +111,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Tue, Jun 1, 2021, 7:00 PM: Zkoušeli jste někdy párové programování nebo mob programming? Nejsou to nové techniky, ale v praxi stále málo použivané.Marian Schubert a Jirka Jansa nám prozradí své zkušen'
-      title: Mob programming a párování
+      meta_description: 'Tue, Jun 1, 2021, 7:00 PM: Zkoušeli jste někdy párové programování nebo mob programming? Nejsou to nové techniky, ale v praxi stále málo použivané.Marian Schubert a Jirka Jansa nám prozradí své zkušen'
+      og_title: Mob programming a párování
       image: https://secure.meetupstatic.com/photos/event/4/f/7/d/600_496520349.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/278418529/
       ical_raw:
@@ -163,8 +163,8 @@ series:
       - END:VEVENT
       - END:VCALENDAR
   - meetupcom:
-      description: 'Tue, May 4, 2021, 7:00 PM: Od bankovních systémů po první elektronickou vodní dýmkuČeká nás jubilejní TopMonks Caffè! Slavíme deset let své existence a proto toto caffè budeme věnovat právě naší cestě'
-      title: 10 let TopMonks
+      meta_description: 'Tue, May 4, 2021, 7:00 PM: Od bankovních systémů po první elektronickou vodní dýmkuČeká nás jubilejní TopMonks Caffè! Slavíme deset let své existence a proto toto caffè budeme věnovat právě naší cestě'
+      og_title: 10 let TopMonks
       image: https://secure.meetupstatic.com/photos/event/f/c/a/600_495964042.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/277826737/
       ical_raw:
