--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -1,15 +1,60 @@
-
-
-https://www.meetup.com/frontendisti/events/
-
 series:
-  id: frontendisti
+  meetupcom:
+    url: https://www.meetup.com/frontendisti/
+    meta_description: 'Komunita, srazy a online streamy zaměřené na webový frontend: JavaScript, CSS, HTML a další témata.'
+    og_title: Frontendisti.cz (Prague, Czech Republic)
+    image: https://secure.meetupstatic.com/photos/event/1/2/1/6/600_498544630.jpeg
   events:
-  - id: frontendisti-prvni-konference
-    url: https://frontendisti.cz/konference
-    title: Historicky první česká frontendová konference Frontendisti.cz
-    date: 2021-05-29
-  - id: meetup-com-280481673
-    url: https://www.meetup.com/frontendisti-brno/events/280481673/
-    title: OFFLINE Frontendisti v Brně
-    date: 2021-09-09
+  - meetupcom:
+      meta_description: 'Sat, May 29, 2021, 10:00 AM: Vstupenky na webu https://frontendisti.cz/konference---Těšit se můžete na tyto přednášky:JAN BIENTailwind CSS – framework, který zvládne každý grafický návrh?BOREK BERNARD'
+      og_title: '{Front Konference} - Historicky první česká frontendová konference'
+      image: https://secure.meetupstatic.com/photos/event/b/e/3/3/600_496128691.jpeg
+      url: https://www.meetup.com/frontendisti/events/278006831/
+      ical_raw:
+      - BEGIN:VCALENDAR
+      - VERSION:2.0
+      - PRODID:-//Meetup//RemoteApi//EN
+      - CALSCALE:GREGORIAN
+      - METHOD:PUBLISH
+      - X-ORIGINAL-URL:https://www.meetup.com/frontendisti/events/278006831/ical/
+      - ' x.ics'
+      - X-WR-CALNAME:Events - x.ics
+      - X-MS-OLK-FORCEINSPECTOROPEN:TRUE
+      - BEGIN:VTIMEZONE
+      - TZID:Europe/Prague
+      - TZURL:http://tzurl.org/zoneinfo-outlook/Europe/Prague
+      - X-LIC-LOCATION:Europe/Prague
+      - BEGIN:DAYLIGHT
+      - TZOFFSETFROM:+0100
+      - TZOFFSETTO:+0200
+      - TZNAME:CEST
+      - DTSTART:19700329T020000
+      - RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
+      - END:DAYLIGHT
+      - BEGIN:STANDARD
+      - TZOFFSETFROM:+0200
+      - TZOFFSETTO:+0100
+      - TZNAME:CET
+      - DTSTART:19701025T030000
+      - RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
+      - END:STANDARD
+      - END:VTIMEZONE
+      - BEGIN:VEVENT
+      - DTSTART;TZID=Europe/Prague:20210529T100000
+      - DTEND;TZID=Europe/Prague:20210529T170000
+      - STATUS:CONFIRMED
+      - SUMMARY:{Front Konference} - Historicky první česká frontendová konferenc
+      - ' e'
+      - DESCRIPTION:Frontendisti.cz\nSaturday\, May 29 at 10:00 AM\n\nVstupenky n
+      - ' a webu https://frontendisti.cz/konference ---Těšit se můžete na tyto pře'
+      - ' dnášky: JAN BIENTailwind CSS – framework\, který zvládne každý grafi...\'
+      - ' n\nhttps://www.meetup.com/frontendisti/events/278006831/'
+      - CLASS:PUBLIC
+      - CREATED:20210505T202617Z
+      - GEO:50.08;14.43
+      - LOCATION:Online event
+      - URL:https://www.meetup.com/frontendisti/events/278006831/
+      - LAST-MODIFIED:20210529T154924Z
+      - UID:event_278006831@meetup.com
+      - END:VEVENT
+      - END:VCALENDAR
